Make sure main content doesn't overlap header
Using flex-shrink 0.

--- a/styles/main.styl
+++ b/styles/main.styl
@@ -18,12 +18,12 @@ html, body, #container
   padding 0
 
 html
-  background  black
-  color       white
   font-size   4px
   font-family 'Lato', sans-serif;
 
 body
+  background      black
+  color           white
   font-size       3.5rem
 
 #container
@@ -38,20 +38,20 @@ body
     flex-shrink   0
     flex-grow     0
 
-  main
-    height        100%
-
 main
-  text-align            center
   display               flex
   flex-direction        column
   align-items           center
   justify-content       space-around
-  height                100%
+
+  flex-shrink           0
+
+  text-align            center
 
   > *
     display             block
     margin              auto
+    flex-shrink         0
 
   h2
     max-width           200rem
